OMDoc v1.2 corrections, command-line-interface added, more relaxed formula processing git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@5191 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/utils/Omdoc/Makefile
+++ b/utils/Omdoc/Makefile
@@ -300,6 +300,9 @@ tax_objects = $(patsubst %.hs, %.o, $(tax_sources))
 
 patch:
 
+integrate:
+	$(HC) --make -o $@ Integrate.hs $(HCI_OPTS) -main-is Integrate
+
 hets: $(sources) $(derived_sources)
 	$(HC) --make -o $@ hets.hs $(HC_OPTS)
 
