switched to new format, removed code for old format, removed OmdocDevGraph-module git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@5929 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/utils/Omdoc/Makefile
+++ b/utils/Omdoc/Makefile
@@ -34,7 +34,7 @@ HCI_OPTS = $(HC_FLAGS) $(HC_INCLUDE) $(HC_PACKAGE) $(PFE_FLAGS)
 ### targets
 
 build: integrate
-integrate: Integrate.hs HetsInterface.hs OmdocDevGraph.hs
+integrate: Integrate.hs HetsInterface.hs
 	$(HC) --make -o $@ Integrate.hs $(HCI_OPTS) -main-is Integrate
 
 ### interactive
