moved h2h and h2hf from ToHaskell to Haskell git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@6074 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/ToHaskell/test/Makefile
+++ b/ToHaskell/test/Makefile
@@ -3,10 +3,10 @@
 .PHONY: check
 
 check: h2h hacapa
-	./runcheck.sh ../h2h
+	./runcheck.sh ../../Haskell/h2h
 
 output: h2h hacapa
-	./runcheck.sh ../h2h set
+	./runcheck.sh ../../Haskell/h2h set
 
 %: 
 	(cd ../..; $(MAKE) $@)
