--- a/hxt/hxt.cabal
+++ b/hxt/hxt.cabal
@@ -1,5 +1,5 @@
 -- arch-tag: Haskell XML Toolbox main description file
-name: hxt
+name: hxt-ext
 version: 5.4
 -- license: MIT
 license-file: LICENCE
@@ -10,6 +10,29 @@ copyright: Copyright (c) 2005 Uwe Schmidt
 -- tested-with: ghc-6.4.1
 -- exposed: True
 exposed-modules:
+-- modules from Http and Crypto essential for hxt
+-- HTTP
+  Network.HTTP, Network.TCP, Network.Stream, Network.Browser, 
+  Codec.Base64,
+-- Crypto
+  Codec.ASN1,
+  Codec.ASN1.BER,
+  Codec.ASN1.X509,
+  Codec.ASN1.PKCS8,
+  Codec.Binary.Base64,
+  Codec.Encryption.RSA,
+  Codec.Encryption.RSA.EMEOAEP,
+  Codec.Encryption.RSA.MGF,
+  Codec.Encryption.RSA.NumberTheory,
+  Codec.Encryption.DES,
+  Codec.Encryption.AES,
+  Codec.Encryption.Blowfish,
+  Codec.Encryption.Modes,
+  Codec.Encryption.Padding,
+  Codec.Utils,
+  Data.Digest.MD5,
+  Data.LargeWord,
+-- original hxt modules
   Control.Arrow.ArrowIf,
   Control.Arrow.ArrowIO,
   Control.Arrow.ArrowList,
@@ -111,9 +134,14 @@ exposed-modules:
   Text.XML.HXT.RelaxNG.Utils,
   Text.XML.HXT.RelaxNG.Validation,
   Text.XML.HXT.RelaxNG.Validator
-hs-source-dir: src
-ghc-options: -Wall -O2 -fglasgow-exts
+-- Other modules section from Crypto
+Other-modules:   Codec.Encryption.BlowfishAux,
+                 Codec.Encryption.DESAux,
+                 Codec.Encryption.AESAux,
+                 Data.Digest.MD5Aux
+hs-source-dir: .
+ghc-options: -Wall -O2 -fglasgow-exts 
 -- import-dirs: /usr/lib/ghc-6.4/hxt/imports
 -- library-dirs: /usr/lib/ghc-6.4/hxt
 -- hs-libraries: HShxt
-build-depends: base, haskell98, parsec, HTTP, HUnit
+build-depends: base, haskell98, parsec, HUnit, network 
