added options to create a profiling version (make profiling) git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@6260 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/OMDoc/Makefile
+++ b/OMDoc/Makefile
@@ -8,12 +8,16 @@ INCLUDE_PATH = ../. ../hxt
 
 HC = ghc
 
+HC_PROF = -prof -auto-all
+
 # remove -fno-warn-orphans for older ghcs
 HC_WARN = -Wall -fno-warn-orphans
 HC_FLAGS = $(HC_WARN) -package fgl -fglasgow-exts -fno-monomorphism-restriction \
     -fallow-overlapping-instances -fallow-undecidable-instances \
 	-ignore-package HaXml-1.12 \
 	-H512m
+
+
 # -ddump-minimal-imports 
 # flags also come in via  ../uni/uni-package.conf
 # but added it here in case of compilation without uni
@@ -22,7 +26,7 @@ HC_INCLUDE = $(addprefix -i, $(INCLUDE_PATH))
 
 UNI_PACKAGE_CONF = $(wildcard ../../uni/uni-package.conf)
 ifneq ($(strip $(UNI_PACKAGE_CONF)),)
-HC_PACKAGE = -package-conf $(UNI_PACKAGE_CONF) -package uni-davinci \
+#HC_PACKAGE = -package-conf $(UNI_PACKAGE_CONF) -package uni-davinci \
     -package uni-server -DUNI_PACKAGE
 
 endif
@@ -32,9 +36,14 @@ HCI_OPTS = $(HC_FLAGS) $(HC_INCLUDE) $(HC_PACKAGE) $(PFE_FLAGS)
 ####################################################################
 ### targets
 
+.PHONY : profiling
+
 build: integrate
 integrate: Integrate.hs HetsInterface.hs XmlHandling.hs OMDocInput.hs Util.hs OMDocDefs.hs Container.hs KeyDebug.hs
 	$(HC) --make -o $@ Integrate.hs $(HCI_OPTS) -main-is OMDoc.Integrate.main
+
+profiling: Integrate.hs HetsInterface.hs XmlHandling.hs OMDocInput.hs Util.hs OMDocDefs.hs Container.hs KeyDebug.hs
+	$(HC) --make -o integrate Integrate.hs $(HCI_OPTS) $(HC_PROF) -main-is OMDoc.Integrate.main
 
 ### interactive
 interactive: ghci
