--- a/CASL_DL/PredefinedSign.inline.hs.in
+++ b/CASL_DL/PredefinedSign.inline.hs.in
@@ -17,7 +17,7 @@ Predefined signature part of CASL_DL.
 
 -}
 
-module CASL_DL.PredefinedSign(predefinedSign) where
+module CASL_DL.PredefinedSign(predefinedSign,topSort,topSortD) where
 
 import CASL_DL.AS_CASL_DL
 import CASL_DL.Sign
@@ -31,8 +31,11 @@ import qualified Common.Lib.Set as Set
 import CASL.AS_Basic_CASL
 import CASL.Sign
 
+import Control.Exception
+
 predefinedSign :: Sign DL_FORMULA CASL_DLSign
 predefinedSign = toCASL_DL_Sign $
+   assert (Set.member topSortD $ sortSet dataSig_CASL) $
    foldl (addSig (\ _ _ -> ())) (emptySign ()) 
            [dataSig_CASL,predefined_symbols] 
 
@@ -47,17 +50,19 @@ toCASL_DL_Sign sig =
       , predMap = predMap sig
       }
 
+topSort :: SORT
+topSort = Id [Token "Thing" nullRange] [] nullRange
+
+topSortD :: SORT
+topSortD = Id [Token "DATA" nullRange] [] nullRange
+
 predefined_symbols :: Sign (FORMULA ()) ()
 predefined_symbols = 
-    ((emptySign ()){ sortSet =
-                      Set.singleton
-                        (Id [Token "Thing" nullRange] [] nullRange)
+    ((emptySign ()){ sortSet = Set.singleton topSort                        
                    , predMap = 
                        Map.singleton (Id [Token "Nothing" nullRange] [] 
                                          nullRange) 
-                           (Set.singleton
-                              (PredType  [Id [Token "Thing" nullRange] [] 
-                                             nullRange]))
+                           (Set.singleton (PredType  [topSort]))
                    })
 
 dataSig_CASL :: Sign (FORMULA ()) ()
