--- a/Makefile.installer
+++ b/Makefile.installer
@@ -7,38 +7,29 @@
 # This Makefile will generate the installer for Hets with IzPack
 #
 
-all: download build
+all: download build cleanup
      
 EMPTY =
 ACTDATE = $(shell date +%F)
-IZPACK_PATH = $(shell echo $$HETS_IZPACK)
-ifeq ($(IZPACK_PATH), $(EMPTY))     
-  IZPACK_PATH = $(PWD)/../izpack_het
-endif
+TMP_PATH = $(PWD)
+IZPACK_PATH = $(TMP_PATH)/Izpack-Hets
 
 IZPACK_COMPILE = $(IZPACK_PATH)/bin/compile
 IZPACK_SAMPLE = $(IZPACK_PATH)/sample
 
-PLATFORM = $(shell uname -s)
-GMPURL = ""
-ifeq ($(PLATFORM), SunOS)
-    INSTALL_XML = $(IZPACK_SAMPLE)/pack/install-solaris.xml
-    INSTALL_JAR = hets-installer-sparc-solatis.jar
-    SPASSURL = http://spass.mpi-sb.mpg.de/download/binaries/spass22sparc59.tgz
-else 
-    ifeq ($(PLATFORM), Darwin)
-        INSTALL_XML = $(IZPACK_PATH)/sample/pack/install-mac.xml
-        INSTALL_JAR = hets-installer-ppc-mac.jar
-	GMPURL=http://www.informatik.uni-bremen.de/agbkb/forschung/formal_methods/CoFI/hets/mac/GMP.framework.zip
-	SPASSURL = http://spass.mpi-sb.mpg.de/download/binaries/spass22mac.dmg
-    else 
-      ifeq ($(PLATFORM), Linux)
-        INSTALL_XML = $(IZPACK_PATH)/sample/pack/install-linux.xml
-        INSTALL_JAR = hets-installer-x86-linux.jar
-	SPASSURL = http://spass.mpi-sb.mpg.de/download/binaries/spass22pclinux.tgz
-      endif
-    endif
-endif
+#PLATFORM = $(shell uname -s)
+GMPURL = http://www.informatike.uni-bremen.de/agbkb/forschung/formal_methods/CoFI/hets/mac/GMP.framework.zip
+INSTALL_XML_SOLARIS = $(IZPACK_SAMPLE)/pack/install-solaris.xml
+INSTALL_XML_MAC = $(IZPACK_PATH)/sample/pack/install-mac.xml
+INSTALL_XML_LINUX = $(IZPACK_PATH)/sample/pack/install-linux.xml
+
+INSTALL_JAR_SOLARIS = hets-installer-sparc-solaris.jar
+INSTALL_JAR_MAC = hets-installer-ppc-mac.jar
+INSTALL_JAR_LINUX = hets-installer-x86-linux.jar
+
+SPASSURL_SOLARIS = http://spass.mpi-sb.mpg.de/download/binaries/spass22sparc59.tgz
+SPASSURL_MAC = http://spass.mpi-sb.mpg.de/download/binaries/spass22mac.dmg
+SPASSURL_LINUX = http://spass.mpi-sb.mpg.de/download/binaries/spass22pclinux.tgz
 
 download : izpack_checkout hetcats-checkout casl-lib-checkout uni-checkout other-download
 
@@ -52,13 +43,16 @@ casl-lib-checkout :
         fi
 
 hetcats-checkout : daily-hets-download
-	$(MAKE) release
+	cd $(TMP_PATH) ;\
+	cvs -d :pserver:cvsread@cvs-agbkb.informatik.uni-bremen.de:\/repository co -P HetCATS ; \
+	cd HetCATS ;\
+	$(MAKE) release ;\
 	mv HetCATS.tar $(IZPACK_SAMPLE)/src/
 	$(RM) -r HetCATS
 	cd $(IZPACK_SAMPLE)/src ; tar xvf HetCATS.tar ; $(RM) HetCATS.tar
 
 daily-hets-download :
-	@sh utils/getDailyHets.sh
+	@sh getDailyHets.sh
 	mv $(HOME)/bin/hets-$(ACTDATE) $(IZPACK_SAMPLE)/hets
 
 uni-checkout :
@@ -79,18 +73,26 @@ izpack_checkout :
 	fi
 
 other-download :
-	if [ $(GMPURL) != "" ]; then \
-	  wget --output-document=$(IZPACK_SAMPLE)/GMP/GMP.framework.zip $(GMPURL) ; \
-	  cd $(IZPACK_SAMPLE)/GMP ; \
-	  unzip GMP.framework.zip ; \
-	  $(RM) GMP.framework.zip ; \
-	fi
-	wget --output-document=$(IZPACK_SAMPLE)/SPASS/spass.tgz $(SPASSURL)
-	cd $(IZPACK_SAMPLE)/SPASS/ ; tar xvf spass.tgz ; $(RM) spass.tgz
+	wget --output-document=$(IZPACK_SAMPLE)/GMP/GMP.framework.zip $(GMPURL) ; \
+	cd $(IZPACK_SAMPLE)/GMP ; \
+	unzip GMP.framework.zip ; \
+	$(RM) GMP.framework.zip 
+	wget --output-document=$(IZPACK_SAMPLE)/SPASS/LINUX/spass.tgz $(SPASSURL_LINUX)
+	wget --output-document=$(IZPACK_SAMPLE)/SPASS/SOLARIS/spass.tgz $(SPASSURL_SOLARIS)
+	wget --output-document=$(IZPACK_SAMPLE)/SPASS/MAC/spass.tgz $(SPASSURL_MAC)
+	cd $(IZPACK_SAMPLE)/SPASS/LINUX/ ; tar xvf spass.tgz ; $(RM) spass.tgz
+	cd $(IZPACK_SAMPLE)/SPASS/SOLARIS/ ; tar xvf spass.tgz ; $(RM) spass.tgz
+	cd $(IZPACK_SAMPLE)/SPASS/MAC/ ; tar xvf spass.tgz ; $(RM) spass.tgz	
 
 build:
 	@chmod +x $(IZPACK_PATH)/bin/compile
-	$(IZPACK_COMPILE) $(INSTALL_XML) -b $(IZPACK_SAMPLE)/ -o $(INSTALL_JAR) -k standard
+	$(IZPACK_COMPILE) $(INSTALL_XML_LINUX) -b $(IZPACK_SAMPLE)/ -o $(INSTALL_JAR_LINUX) -k standard
+	$(IZPACK_COMPILE) $(INSTALL_XML_SOLARIS) -b $(IZPACK_SAMPLE)/ -o $(INSTALL_JAR_SOLARIS) -k standard
+	$(IZPACK_COMPILE) $(INSTALL_XML_MAC) -b $(IZPACK_SAMPLE)/ -o $(INSTALL_JAR_MAC) -k standard
 
-.PHONY : all download build casl-lib-checkout hetcats-checkout daily-hets-download daily-hets-download other-download izpack_checkout
+cleanup:
+	$(RM) -r $(IZPACK_PATH)
+	$(RM) *.sh
+	$(RM) Makefile
 
+.PHONY : all download build casl-lib-checkout hetcats-checkout daily-hets-download daily-hets-download other-download izpack_checkout cleanup
