use  to automatic replace the path of insteller. git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7087 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/hets.in
+++ b/hets.in
@@ -7,13 +7,13 @@
 ### installation;
 ### it is post processed by some IzPack variables starting with %
 
-HETS_LIB=%INSTALL_PATH/CASL-lib
+HETS_LIB=$INSTALL_PATH/CASL-lib
 HETS_ISABELLE=
-HETS_OWL_PARSER=
+HETS_OWL_PARSER=$INSTALL_PATH/src/HetCATS/OWL_DL
 UNIWISH=/usr/bin/wish
-UNIDAVINCI=/Users/luettich/uDrawGraph-3.1/bin/uDrawGraph
+UNIDAVINCI=$INSTALL_PATH/lib/uDrawGraph-3.1/bin/uDrawGraph
 
-HETS=%INSTALL_PATH/lib/hets
+HETS=$INSTALL_PATH/lib/hets/hets
 
 export HETS_LIB HETS_ISABELLE HETS_OWL_PARSER UNIWISH UNIDAVINCI
 
