--- a/hets.in
+++ b/hets.in
@@ -13,7 +13,7 @@ HETS_OWL_PARSER=$INSTALL_PATH/src/HetCATS/OWL_DL
 UNIWISH=/usr/bin/wish
 UNIDAVINCI=$INSTALL_PATH/lib/uDrawGraph-3.1/bin/uDrawGraph
 
-HETS=$INSTALL_PATH/lib/hets/hets
+HETS=$INSTALL_PATH/lib/hets-$HETS_VERSION/hets
 
 export HETS_LIB HETS_ISABELLE HETS_OWL_PARSER UNIWISH UNIDAVINCI
 
