-O2 does not work on a mac when compiling Control.Arrow.ListArrow git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7182 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/hxt/hxt.cabal
+++ b/hxt/hxt.cabal
@@ -119,5 +119,5 @@ exposed-modules:
   Text.XML.HXT.RelaxNG.Utils,
   Text.XML.HXT.RelaxNG.Validation,
   Text.XML.HXT.RelaxNG.Validator
-ghc-options: -Wall -O2 -fglasgow-exts
+ghc-options: -Wall -O -fglasgow-exts
 build-depends: base, haskell98, parsec, HTTP, HUnit, network
