readded -fcontext-stack60 git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7218 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/haifa-lite/haifa.cabal
+++ b/haifa-lite/haifa.cabal
@@ -23,5 +23,5 @@ extensions:
         FunctionalDependencies,
 	UndecidableInstances,
         TemplateHaskell
-ghc-options: -O
+ghc-options: -O -fcontext-stack60
 hs-source-dirs: src
