--- a/syb-generics/syb-generics.cabal
+++ b/syb-generics/syb-generics.cabal
@@ -2,6 +2,7 @@ name:		syb-generics
 version:	2.9
 license:	BSD3
 maintainer:	libraries@haskell.org
+stability:      experimental
 exposed-modules:
 	Data.Generics2,
 	Data.Generics2.Basics,
@@ -11,3 +12,6 @@ exposed-modules:
 	Data.Generics2.Derive,
 	Data.Context
 build-depends:	base, template-haskell, haskell98
+extensions: OverlappingInstances, UndecidableInstances, 
+            CPP, TemplateHaskell, ScopedTypeVariables, Rank2Types
+ghc-options: -O
