corrected the path of owl_parser. git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7235 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/Makefile.installer
+++ b/Makefile.installer
@@ -64,7 +64,7 @@ hetcats-make : daily-hets-download
 	mv HetCATS.tar $(IZPACK_SAMPLE)/src/ ;\
 	mkdir $(IZPACK_SAMPLE)/hets/OWLParser ; \
 	mkdir $(IZPACK_SAMPLE)/hets/OWLParser/java ; \
-	cp OWL_DL/owl_parser $(IZPACK_SAMPLE)/hets/OWLParser ; \
+	cp OWL_DL/owl_parser.installer $(IZPACK_SAMPLE)/hets/OWLParser/owl_parser ; \
 	cp OWL_DL/java/OWLParser.jar $(IZPACK_SAMPLE)/hets/OWLParser/java ; \
 	cp -r OWL_DL/java/jlib  $(IZPACK_SAMPLE)/hets/OWLParser/java
 	$(RM) -r HetCATS
